--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ html {
     font-family: 'Poppins', sans-serif;
     background-color:var(--main-color);
     background-size: cover;
+    overflow: hidden;
 }
 
 main {
@@ -184,10 +185,12 @@ main {
 /* ------ | PAGE CONTENT */
 .about-videoFalling {
     display: inline-block;
-    width: 34%;
-    height: 30%;
+    height: 100%;
 }
 
+.about-pageText {
+    height: 100%;
+}
 .about-pageText-body {
     display: inline-block;
     vertical-align: top;
@@ -237,3 +240,62 @@ main {
 /* SIDE BAR | text */
 
 /* SIDE BAR | a tags */
+
+/*      ---------------------
+        ABOUT.HTML
+        --------------------- */
+.map {
+    display: inline-block;
+    height: 85%;
+}
+
+form {
+    width: 65%;
+    display: inline-block;
+    padding-left: 3rem;
+    padding-top: 5rem;
+    vertical-align: top;
+}
+
+form > * {
+    display: inline-block;
+    width: 80%;
+    max-width: 500px;
+    margin-bottom: .5rem;
+    font-family: 'Poppins', sans-serif;
+}
+
+.contact-Text {
+    height: 1.7rem;
+    padding:.2rem;
+    background-color: var(--main-color);
+    font-style: italic;
+    border-width: 0 0 2px 0;
+}
+
+#contact-descript {
+    height: 5rem;
+}
+
+#submit-bttn {
+    width: 7%;
+    min-width: 75px;
+    padding: .2rem;
+    background-color: var(--logo-background);
+    border: none;
+    box-shadow: 2px 2px 4px -1px rgba(0, 0, 0, 0.75);
+}
+
+#submit-bttn:hover {
+    color: var(--logo-background);
+    background-color: var(--main-color-darker);
+    box-shadow: 2px 2px 4px -1px rgba(0, 0, 0, 0.75);
+}
+
+#submit-bttn:active {
+    box-shadow: 5px 4px 4px -1px rgba(0, 0, 0, 0.75) inset;
+}
+
+body, main {
+    height: 100%;
+}
